Bug 689416 - Stop using intermediate layers to render 3d transforms. r=roc